--- a/test.html
+++ b/test.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <script>
-    alert('Hello, world');
+    // alert('Hello, world');
   </script>
 </head>
 <body>
+  <h1>Hello world!</h1>
+  <p>This is my first JS test.</p>
   <script  src="/js/test.js"></script>
 </body>
 </html>
